# claude-workbench

./: .agent-workbench.yaml  .gitignore  AI_AGENT_GUIDE.md  AI_AGENT_PROJECT.md  CLAUDE.md  LICENSE  README.md  manifest.yaml  workbench.json
.claude/: hookify.guard-marketplace-edit.md  settings.json
.claude-plugin/: marketplace.json
.githooks/: pre-commit
archive/claude-workbench-legacy/: CLAUDE.legacy.md  README.md  pyproject.toml  workbench.json
archive/claude-workbench-legacy/.claude/: hookify.format-markdown.md  hookify.guard-marketplace-edit.md  settings.local.json
archive/claude-workbench-legacy/.claude/rules/: python.md
archive/claude-workbench-legacy/.claude/skills/new-plugin/: SKILL.md
archive/claude-workbench-legacy/plugins/core/: hookify.block-bad-git-add.md  hookify.block-no-verify.md
archive/claude-workbench-legacy/plugins/core/.claude-plugin/: plugin.json
archive/claude-workbench-legacy/plugins/core/hooks/: hooks.json  test_document_sync.py
archive/claude-workbench-legacy/plugins/core/skills/review/: SKILL.md
archive/claude-workbench-legacy/plugins/core/skills/update-document/: SKILL.md
archive/claude-workbench-legacy/plugins/core/skills/update-todo/: SKILL.md
archive/claude-workbench-legacy/plugins/python/.claude-plugin/: plugin.json
archive/claude-workbench-legacy/plugins/rust/hooks/: guard-rust-commit.sh  hooks.json
archive/claude-workbench-legacy/plugins/rust/skills/optimize/: SKILL.md
archive/claude-workbench-legacy/rules/: python.md  rust.md
archive/claude-workbench-legacy/scripts/: sync_workbench.py
guide/: base.md  (+5 more)
(+81 files in other folders)
